HDFS-1996.  ivy: hdfs test jar should be independent to common test jar.  Contributed by Eric Yang
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1127759 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -447,6 +447,9 @@ Trunk (unreleased changes)
 
     HDFS-1959. Better error message for missing namenode directory. (eli)
 
+    HDFS-1996.  ivy: hdfs test jar should be independent to common test jar.
+    (Eric Yang via szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
