HDFS-2000. Missing deprecation for io.bytes.per.checksum. Contributed by Aaron T. Myers
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1127819 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1066,7 +1066,10 @@ Release 0.22.0 - Unreleased
 
     HDFS-1997. Image transfer process misreports client side exceptions.
     (todd via eli)
-    
+
+    HDFS-2000. Missing deprecation for io.bytes.per.checksum.
+    (Aaron T. Myers vie eli)
+
 Release 0.21.1 - Unreleased
     HDFS-1466. TestFcHdfsSymlink relies on /tmp/test not existing. (eli)
 
