HDFS-1999. Tests use deprecated configs. Contributed by Aaron T. Myers
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1127823 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -624,6 +624,8 @@ Trunk (unreleased changes)
     HDFS-1983. Fix path display for copy and rm commands in TestHDFSCLI and
     TestDFSShell. (Daryn Sharp via todd)
 
+    HDFS-1999. Tests use deprecated configs. (Aaron T. Myers via eli)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
