--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -626,6 +626,9 @@ Trunk (unreleased changes)
 
     HDFS-1999. Tests use deprecated configs. (Aaron T. Myers via eli)
 
+    HDFS-1592. Datanode startup doesn't honor volumes.tolerated. 
+    (Bharath Mundlapudi via jitendra)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
