MAPREDUCE-2536. Update FsShell -mv command usage in TestMRCLI.  Contributed by Daryn Sharp
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1128124 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -235,6 +235,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2470. Fix NPE in RunningJobs::getCounters. (Robert Joseph Evans
     via cdouglas)
 
+    MAPREDUCE-2536. Update FsShell -mv command usage in TestMRCLI.  (Daryn
+    Sharp via cdouglas)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
