Fix MAPREDUCE-2536 entry in CHANGES.txt.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1128125 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -236,7 +236,7 @@ Trunk (unreleased changes)
     via cdouglas)
 
     MAPREDUCE-2536. Update FsShell -mv command usage in TestMRCLI.  (Daryn
-    Sharp via cdouglas)
+    Sharp via szetszwo)
 
 Release 0.22.0 - Unreleased
 
