MAPREDUCE-2521. Create RPM and Debian packages for MapReduce. Changes deployment layout to be consistent across the binary tgz, rpm, and deb. (Eric Yang via omalley)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1128394 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,10 @@ Trunk (unreleased changes)
     MAPREDUCE-461. Enable ServicePlugins for the JobTracker.
     (Fredrik Hedberg via tomwhite)
 
+    MAPREDUCE-2521. Create RPM and Debian packages for MapReduce. Changes 
+    deployment layout to be consistent across the binary tgz, rpm, and deb.
+    (Eric Yang via omalley)
+
   IMPROVEMENTS
 
     MAPREDUCE-2517. [Gridmix] Add system tests to Gridmix. 
