HDFS-1920. libhdfs does not build for ARM processors. Contributed by Trevor Robinson
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1128473 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -635,6 +635,9 @@ Trunk (unreleased changes)
     HDFS-1592. Datanode startup doesn't honor volumes.tolerated. 
     (Bharath Mundlapudi via jitendra)
 
+    HDFS-1920. libhdfs does not build for ARM processors.
+    (Trevor Robinson via eli)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
