HDFS-977. DataNode.createInterDataNodeProtocolProxy() guards a log at the wrong level. Contributed by Harsh J Chouraria.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1128986 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1087,6 +1087,9 @@ Release 0.22.0 - Unreleased
     HDFS-2000. Missing deprecation for io.bytes.per.checksum.
     (Aaron T. Myers vie eli)
 
+    HDFS-977. DataNode.createInterDataNodeProtocolProxy() guards a log
+    at the wrong level. (Harsh J Chouraria via todd)
+
 Release 0.21.1 - Unreleased
     HDFS-1466. TestFcHdfsSymlink relies on /tmp/test not existing. (eli)
 
