MAPREDUCE-2455. Remove deprecated JobTracker.State in favour of JobTrackerStatus.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1129771 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ Trunk (unreleased changes)
 
   INCOMPATIBLE CHANGES
 
+    MAPREDUCE-2455. Remove deprecated JobTracker.State in favour of
+    JobTrackerStatus. (tomwhite)
+
   NEW FEATURES
 
     MAPREDUCE-2408. [Gridmix] Compression emulation in Gridmix. (amarrk)
