HDFS-1727. fsck command should display command usage if user passes any illegal argument. Contributed by Sravan Kumar.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1129831 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -459,6 +459,9 @@ Trunk (unreleased changes)
     HDFS-1884. Improve TestDFSStorageStateRecovery to properly throw in the
     case of errors. (Aaron T. Myers via todd)
 
+    HDFS-1727. fsck command should display command usage if user passes any
+    illegal argument. (Sravan Kumar via todd)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
