HDFS-1936. Layout version change from HDFS-1822 causes upgrade failure. Contributed by Suresh Srinivas.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1129942 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -644,6 +644,9 @@ Trunk (unreleased changes)
     HDFS-1920. libhdfs does not build for ARM processors.
     (Trevor Robinson via eli)
 
+    HDFS-1936. Layout version change from HDFS-1822 causes upgrade failure.
+    (suresh)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
