--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -465,6 +465,9 @@ Trunk (unreleased changes)
     HDFS-1727. fsck command should display command usage if user passes any
     illegal argument. (Sravan Kumar via todd)
 
+    HDFS-1636. If dfs.name.dir points to an empty dir, namenode format
+    shouldn't require confirmation. (Harsh J Chouraria via todd)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
