HDFS-2021. Update numBytesAcked before sending the ack in PacketResponder.  Contributed by John George
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1130339 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -653,6 +653,9 @@ Trunk (unreleased changes)
     HDFS-1936. Layout version change from HDFS-1822 causes upgrade failure.
     (suresh)
 
+    HDFS-2021. Update numBytesAcked before sending the ack in PacketResponder.
+    (John George via szetszwo)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
