HDFS-1966.  Encapsulate individual DataTransferProtocol op headers.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1130367 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -468,6 +468,9 @@ Trunk (unreleased changes)
     HDFS-1636. If dfs.name.dir points to an empty dir, namenode format
     shouldn't require confirmation. (Harsh J Chouraria via todd)
 
+    HDFS-1966.  Encapsulate individual DataTransferProtocol op headers.
+    (szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
