HDFS-2024.  Format TestWriteRead source codes.  Contributed by CW Chung
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1130381 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -471,6 +471,8 @@ Trunk (unreleased changes)
     HDFS-1966.  Encapsulate individual DataTransferProtocol op headers.
     (szetszwo)
 
+    HDFS-2024.  Format TestWriteRead source codes.  (CW Chung via szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
