--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -23,6 +23,9 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
 
+    MAPREDUCE-2469. Task counters should also report the total heap usage of 
+    the task. (Ravi Gummadi and Amar Ramesh Kamat via amarrk)
+
     MAPREDUCE-2544. [Gridmix] Add compression emulation system tests to 
     Gridmix. (Vinay Kumar Thota via amarrk)
 
