MAPREDUCE-2543. [Gridmix] High-Ram feature emulation in Gridmix. (amarrk)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1130550 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -9,6 +9,8 @@ Trunk (unreleased changes)
 
   NEW FEATURES
 
+    MAPREDUCE-2543. [Gridmix] High-Ram feature emulation in Gridmix. (amarrk)
+
     MAPREDUCE-2408. [Gridmix] Compression emulation in Gridmix. (amarrk)
 
     MAPREDUCE-2473. Add "mapred groups" command to query the server-side groups
