MAPREDUCE-2543. [Gridmix] High-Ram feature emulation testcase. (amarrk)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1130554 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -25,6 +25,8 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
 
+    MAPREDUCE-2543. [Gridmix] High-Ram feature emulation testcase. (amarrk)
+
     MAPREDUCE-2469. Task counters should also report the total heap usage of 
     the task. (Ravi Gummadi and Amar Ramesh Kamat via amarrk)
 
