HDFS-1968.  Enhance TestWriteRead to support position/sequential read, append, truncate and verbose options.  Contributed by CW Chung
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1130667 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -473,6 +473,9 @@ Trunk (unreleased changes)
 
     HDFS-2024.  Format TestWriteRead source codes.  (CW Chung via szetszwo)
 
+    HDFS-1968.  Enhance TestWriteRead to support position/sequential read,
+    append, truncate and verbose options.  (CW Chung via szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
