HDFS-2022. ant binary should build libhdfs. Contributed by Eric Yang
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1130734 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -667,6 +667,8 @@ Trunk (unreleased changes)
     HDFS-2020. Fix TestDFSUpgradeFromImage by removing the use of DataNode
     as a singleton. (suresh via todd)
 
+    HDFS-2022. ant binary should build libhdfs. (Eric Yang via eli)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
