HDFS-2014. Change HDFS scripts to work in developer enviroment post RPM packaging changes. Contributed by Eric Yang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1130843 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -669,6 +669,9 @@ Trunk (unreleased changes)
 
     HDFS-2022. ant binary should build libhdfs. (Eric Yang via eli)
 
+    HDFS-2014. Change HDFS scripts to work in developer enviroment post
+    RPM packaging changes. (Eric Yang via suresh)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
