HDFS-1995. Federation: Minor bug fixes and modification cluster web UI. Contributed by Tanping Wang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1130855 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -672,6 +672,9 @@ Trunk (unreleased changes)
     HDFS-2014. Change HDFS scripts to work in developer enviroment post
     RPM packaging changes. (Eric Yang via suresh)
 
+    HDFS-1995. Federation: Minor bug fixes and modification cluster web UI.
+    (Tanping Wang via suresh)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
