MAPREDUCE-2531. Fixed jobcontrol to downgrade JobID. Contributed by Robert Evans.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1130992 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -163,6 +163,9 @@ Trunk (unreleased changes)
 
   BUG FIXES
 
+    MAPREDUCE-2531. Fixed jobcontrol to downgrade JobID. (Robert Evans via
+    acmurthy) 
+
     MAPREDUCE-1978. Rumen TraceBuilder should provide recursive
     input folder scanning.
 
