--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -163,6 +163,9 @@ Trunk (unreleased changes)
 
   BUG FIXES
 
+    MAPREDUCE-2539. Fixed NPE in getMapTaskReports in JobClient. (Robert Evans via
+    acmurthy) 
+
     MAPREDUCE-2531. Fixed jobcontrol to downgrade JobID. (Robert Evans via
     acmurthy) 
 
