--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -287,6 +287,9 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
 
+    HDFS-2019. Fix all the places where Java method File.list is used with
+    FileUtil.list API (Bharath Mundlapudi via mattf)
+
     HDFS-1934. Fix NullPointerException when certain File APIs return null
     (Bharath Mundlapudi via mattf)
 
