--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -25,6 +25,9 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
 
+    MAPREDUCE-2554. [Gridmix]  Add distributed cache emulation system tests 
+    to Gridmix. (Vinay Kumar Thota via amarrk)
+ 
     MAPREDUCE-2543. [Gridmix] High-Ram feature emulation testcase. (amarrk)
 
     MAPREDUCE-2469. Task counters should also report the total heap usage of 
