MAPREDUCE-2487. ChainReducer uses MAPPER_BY_VALUE instead of REDUCER_BY_VALUE. Contributed by Devaraj K.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1132719 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -841,6 +841,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2515. MapReduce code references some deprecated options
     (Ari Rabkin via todd)
 
+    MAPREDUCE-2487. ChainReducer uses MAPPER_BY_VALUE instead of
+    REDUCER_BY_VALUE. (Devaraj K via todd)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
