--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1148,6 +1148,9 @@ Release 0.22.0 - Unreleased
     HDFS-1969. Running rollback on new-version namenode destroys the
     namespace. (todd)
 
+    HDFS-2039. TestNameNodeMetrics uses a bad test root path, preventing it
+    from running inside Eclipse. (todd)
+
 Release 0.21.1 - Unreleased
     HDFS-1466. TestFcHdfsSymlink relies on /tmp/test not existing. (eli)
 
