HDFS-1998. Federation: Make refresh-namenodes.sh refresh all the namenode. Contributed by Tanping Wang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1132829 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -258,7 +258,7 @@ Trunk (unreleased changes)
     HDFS-1813. Federation: Authentication using BlockToken in RPC to datanode 
                fails. (jitendra)
 
-    HDFS_1630. Support fsedits checksum. (hairong)
+    HDFS-1630. Support fsedits checksum. (hairong)
 
     HDFS-1606. Provide a stronger data guarantee in the write pipeline by
     adding a new datanode when an existing datanode failed.  (szetszwo)
@@ -692,6 +692,9 @@ Trunk (unreleased changes)
 
     HDFS-1149. Lease reassignment should be persisted to the edit log.
     (Aaron T. Myers via todd)
+
+    HDFS-1998. Federation: Make refresh-namenodes.sh refresh all the
+    namenode. (Tanping Wang via suresh)
 
 Release 0.22.0 - Unreleased
 
