MAPREDUCE-2571. CombineFileInputFormat.getSplits throws a java.lang.ArrayStoreException. Contributed by Bochun Bai.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1133175 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -847,6 +847,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2185. Fix infinite loop at creating splits using
     CombineFileInputFormat. (Ramkumar Vadali via schen)
 
+    MAPREDUCE-2571. CombineFileInputFormat.getSplits throws a
+    java.lang.ArrayStoreException. (Bochun Bai via todd)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
