HDFS-1875. MiniDFSCluster hard-codes dfs.datanode.address to localhost. Contributed by Eric Payne.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1133181 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -287,6 +287,9 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
 
+    HDFS-1875. MiniDFSCluster hard-codes dfs.datanode.address to localhost
+    (Eric Payne via mattf)
+
     HDFS-2019. Fix all the places where Java method File.list is used with
     FileUtil.list API (Bharath Mundlapudi via mattf)
 
