MAPREDUCE-2559. ant binary fails due to missing c++ lib dir. Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1133226 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -278,6 +278,8 @@ Trunk (unreleased changes)
     MAPREDUCE-2529. Add support for regex-based shuffle metric counting
     exceptions. (Thomas Graves via cdouglas)
 
+    MAPREDUCE-2559. ant binary fails due to missing c++ lib dir. (eli)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
