--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -490,6 +490,9 @@ Trunk (unreleased changes)
 
     HDFS-2040. Only build libhdfs if a flag is passed. (eli)
 
+    HDFS-1586. Add InterfaceAudience and InterfaceStability annotations to 
+    MiniDFSCluster. (suresh)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
