MAPREDUCE-2573. Fix new findbugs warning introduced by MAPREDUCE-2494. Contributed by Robert Joseph Evans.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1134121 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -280,6 +280,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-2559. ant binary fails due to missing c++ lib dir. (eli)
 
+    MAPREDUCE-2573. Fix new findbugs warning introduced by MAPREDUCE-2494.
+    (Robert Joseph Evans via todd)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
